--- a/Software Engineering Project/Software Engineering Project.csproj
+++ b/Software Engineering Project/Software Engineering Project.csproj
@@ -19,6 +19,9 @@
     <Content Include="Resources\Tusk.ico" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="CppAst" Version="0.11.0" />
+    <PackageReference Include="Microsoft.Build" Version="17.5.0" />
+    <PackageReference Include="Microsoft.Build.Utilities.Core" Version="17.5.0" />
     <PackageReference Include="Microsoft.CSharp" Version="4.7.0" />
     <PackageReference Include="System.Buffers" Version="4.5.1" />
     <PackageReference Include="System.Data.DataSetExtensions" Version="4.5.0" />
